--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@ function submitToAPI(e) {
     <p>Email: gtorikt@staryapi.awsapps.com</p>
     <p>Cep Tel: 0-532-324-2658 </p>
  <form id="contact-form" method="post">
-      <input class="w3-input w3-border" type="text" placeholder="Name" id="Name">
-      <input class="w3-input w3-section w3-border" type="text" placeholder="Email" id="Email">
-      <input class="w3-input w3-section w3-border" type="text" placeholder="Subject" id="Subject">
-      <input class="w3-input w3-section w3-border" type="text" placeholder="Comment" id="Comment">
+      <input class="w3-input w3-border" type="text" placeholder="Name" id="Name-input">
+      <input class="w3-input w3-section w3-border" type="text" placeholder="Email" id="Email-input">
+      <input class="w3-input w3-section w3-border" type="text" placeholder="Phone" id="Phone-input">
+      <input class="w3-input w3-section w3-border" type="text" placeholder="Comment" id="Comment-input">
       <button type="button" onClick="submitToAPI(event)" class="btn btn-lg" style="margin-top:20px;"> SEND MESSAGE
       </button>
     </form>
