--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
        var name = $("#name-input").val();
        var phone = $("#phone-input").val();
        var email = $("#email-input").val();
-       var desc = $("#description-input").val();
+       var comment = $("#comment-input").val();
        var data = {
           name : name,
           phone : phone,
           email : email,
-          desc : desc
+          comment : comment
         };
  $.ajax({
          type: "POST",
